@@ -226,6 +226,9 @@ mr_nick(struct Client *client_p, struct Client *source_p,
   {
     sendto_one(source_p, form_str(ERR_ERRONEUSNICKNAME), me.name,
                source_p->name[0] ? source_p->name : "*", nick);
+    sendto_realops_flags(L_ALL, UMODE_REJ,
+                         "Forbidding reserved nick [%s] from user %s",
+                         nick, get_client_name(client_p, HIDE_IP));
     return;
   }
 
@@ -289,6 +292,9 @@ m_nick(struct Client *client_p, struct Client *source_p,
   {
     sendto_one(source_p, form_str(ERR_ERRONEUSNICKNAME),
                me.name, source_p->name, nick);
+    sendto_realops_flags(L_ALL, UMODE_REJ,
+                         "Forbidding reserved nick [%s] from user %s",
+                         nick, get_client_name(client_p, HIDE_IP));
     return;
   }
 
