@@ -114,6 +114,7 @@ o) Replaced MODLOAD, MODUNLOAD, MODRELOAD, MODLIST and MODRESTART commands
    with the new MODULE command which can be fed with the LOAD, UNLOAD, RELOAD
    and LIST parameters.
    MODRESTART has been entirely removed. Use "MODULE RELOAD *" to reload all modules
+o) Added back server notice when a client tries to obtain a reserved nick name
 
 
 -- ircd-hybrid-8beta1 Release Notes
